# project1_malygin_artyom_m25-555

./: README.md  demo.cast  game_demo.cast  makefile  pyproject.toml
labyrinth_game/: __init__.py  constants.py  main.py  player_actions.py  utils.py
