[tool.poetry]
name = "project1-malygin-artyom-m25-555"
version = "0.1.0"
description = ""
authors = ["Malygin Artyom"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
